--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/pamelv/bloom#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2"
-  }
+  },
+  "devDependencies": {}
 }
