--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/pamelv/bloom#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2"
