--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "You can use the [editor on GitHub](https://github.com/pamelv/bloom/edit/master/README.md) to maintain and preview the content for your website in Markdown files.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,5 +32,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^4.1.2"
+  }
 }
