--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
   },
   "homepage": "https://github.com/pamelv/bloom#readme",
   "dependencies": {
+    "@ionic/cli": "^6.5.0",
+    "@ionic/react": "^5.0.7",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2"
