--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.2"
+    "node-spotify-api": "^1.1.1",
+    "nodemon": "^2.0.2",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2"
