created mood-themed recipe pages with updated server & client routes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "You can use the [editor on GitHub](https://github.com/pamelv/bloom/edit/master/README.md) to maintain and preview the content for your website in Markdown files.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "html-react-parser": "^0.10.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
