--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
-   "dependencies": {
+  "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "history": "^4.10.1",
+    "html-react-parser": "^0.10.3",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -25,7 +26,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
