--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.3.1",
+    "react-loader-spinner": "^3.1.14",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
