--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react-loader-spinner": "^3.1.14",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
+    "toasted-notes": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
