--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "morgan": "^1.10.0",
     "node-spotify-api": "^1.1.1",
     "nodemon": "^2.0.2",
+    "react-spring": "^8.0.27",
+    "toasted-notes": "^3.2.0",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
