--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "node-spotify-api": "^1.1.1",
     "nodemon": "^2.0.2",
+    "react-router-hash-link": "^1.2.2",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
